# Protobuf-Example

./: CMakeLists.txt  README.md
libs/protobuf/lib/Win32/Release/: libprotobuf-lite.lib
libs/protobuf/lib/x64/Release/: libprotobuf-lite.lib
src/: lm.helloworld.proto  main.cpp
